--- a/index.template.html
+++ b/index.template.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>HtmlWebpackPlugin Memory Leak</title>
+    <title>Webpack Memory Leak</title>
   </head>
   <body>
     <div id="root"></div>
